--- a/src/UndoButton.css
+++ b/src/UndoButton.css
@@ -1,5 +1,5 @@
 .undo_button {
-    font-size: 15pt;
+    font-size: 130%;
     color: black;
     font-weight: bold;
 }
